--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
         <img src="10.jpg" alt="">
         <div class="card-content">
             <h2>Now Guess Who I Am? 🕵️‍♂️</h2>
-            <p>"All these feelings are real. If this made you smile… check your followers. I'm there waiting ✨<br><strong>Hint: One from your followers list</strong>"</p>
+            <p>"All these feelings are real. If this made you smile… check your followers. I'm there waiting ✨<br><strong>Hint: One from your followers list whose name starts with 'S'😉</strong>"</p>
             <div class="poet">- Your Secret Admirer, for you 😌</div>
         </div>
     </div>
